[package]
name = "lldb-win"
version = "0.3.1932"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
flate2 = "1.0.33"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
lapce-plugin = {git = "https://github.com/elo1lson/lapce-plugin-rust.git"}
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
opt-level = 'z'